test/expected/regression-delayed-formater.txt
/scripts/regression-delayed-formater.js:18
throw new Error('trace');
^

Error: trace
    at-hack Object.<anonymous> (/scripts/regression-delayed-formater.js:18:7)
    at-hack Module._compile (module.js:569:30)
    at-hack Object.Module._extensions..js (module.js:580:10)
    at-hack Module.load (module.js:503:32)
    at-hack tryModuleLoad (module.js:466:12)
    at-hack Function.Module._load (module.js:458:3)
    at-hack Function.Module.runMain (module.js:605:10)
    at-hack startup (bootstrap_node.js:158:16)
    at-hack bootstrap_node.js:575:3
